feat: make links refer to relecant website sections

--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
     --btn-bg: #0d0d0d;/* button bg color*/
 
     --primary-text-color: #000;
-    --link-hover: #6dbb00;
+    --link-hover: #000000;
     --footer-link-hover: #6dbb00;
     --input-focus-bd-color: #0d0d0d;
 }
